Wage Gap Tableau added

--- a/index.html
+++ b/index.html
@@ -76,24 +76,42 @@
 
 						<!-- Projects -->
 							<article id="projects">
-
 								<h2 class="major">Projects</h2>
+
 								<div class ="bord">
-								<h3><i class="fas fa-database"></i>  Covid-19: A Brief visualisation
+								<h3><i class="fas fa-database"></i>  Australia's Wage Gap
+									<ul class="buttons">
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/Australia-Wage-Gap" >Github</a></li>
+										<li><a class="button tableau" href="https://public.tableau.com/views/AustraliasWageGapdownloadforbetterview/AustraliasGenderWageGap?:language=en-GB&publish=yes&:display_count=n&:origin=viz_share_link" >Tableau</a></li>
+									</ul></h3>
+
+								<p>A Tableau dashboard looking at Australia's wage gap over the years. Using The Australia Bureau of Statistics' (ABS)
+									data on Australian wages, the goal of this project is to visualise it in different ways
+									and explore the wage gap through unique statistics.
+								</p>
+								<a >
+									<span class="image lgprojects" >  <img src="images/wage_gap_full.jpg"/> </span> </a>
+								</div>
+								<br>
+
+								<div class ="bord">
+								<h3><i class="fas fa-database"></i>   Covid-19: A Brief visualisation
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Covid-BigQuery" >Github</a></li>
-										<li><a class="button tableau" href="https://public.tableau.com/views/CovidVizzes/ABriefLookintotheCovidCrisis?:language=en-GB&:display_count=n&:origin=viz_share_link" >Tableau</a></li>
+										<li><a class="button tableau" href="https://public.tableau.com/views/CovidVaccines_16532928815600/Vaccinationsvs_Covid-19Lethality?:language=en-GB&publish=yes&:display_count=n&:origin=viz_share_link" >Tableau</a></li>
 										<li><a class="button query" href="https://console.cloud.google.com/bigquery?sq=1088934068651:81b9c4e580a64e78961b34617943fa4a" >BigQuery</a></li>
 
 									</ul></h3>
 
-								<p>An analysis of Covid data to see the general effect of Covid-19 and the effect vaccines
-									have had on Covid-19 cases and deaths.
+								<p>An analysis of Covid-19 data and tableau dashboard to visualise it. Using data from 'Our World in Data' Covid-19
+									global statistics, the goal of this project is to develop and uniquely visualise it to present Covid-19's
+									effect on the world in a pleasing and easy to understand fashion.
 								</p>
-								<div class='tableauPlaceholder' id='viz1653286431964' style='position: relative'><noscript><a href='#'><img alt='Vaccinations vs. Covid-19 Lethality - February 2021 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CovidVaccines_16532928815600&#47;Vaccinationsvs_Covid-19Lethality&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CovidVaccines_16532928815600&#47;Vaccinationsvs_Covid-19Lethality' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CovidVaccines_16532928815600&#47;Vaccinationsvs_Covid-19Lethality&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1653286431964');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.6)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+								<div class='tableauPlaceholder' id='viz1653903148301' style='position: relative'><noscript><a href='#'><img alt='Vaccinations vs. Covid-19 Lethality - December 2020 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CovidVaccines_16532928815600&#47;Vaccinationsvs_Covid-19Lethality&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CovidVaccines_16532928815600&#47;Vaccinationsvs_Covid-19Lethality' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CovidVaccines_16532928815600&#47;Vaccinationsvs_Covid-19Lethality&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1653903148301');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.6)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
 								</div>
 								<br>
+
 
 								<div class ="bord">
 								<h3><i class="fab fa-r-project"></i>  Forecasting: Australian Retail Turnover
@@ -112,21 +130,21 @@
 								</div>
 								<br>
 								<div class ="bord">
-								<h3> <i class="fab fa-r-project"></i> Pricing Tool: Insurance Products
+								<h3> <i class="fas fa-file-excel"></i> Reverse Mortgage Analysis
 									<ul class="buttons">
-										<li><a class="button github" href="https://github.com/SivaramAinkaran/Life-Insurance-Pricing-Tool" >Github</a></li>
-										<li><a class="button shiny" href="https://sivaramainkaran.shinyapps.io/pricing_tool/" >Shiny</a></li>
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/Reverse-Mortgage-Analysis/tree/main" >Github</a></li>
+										<li><a class="button pdf" href="pdf/reverse_mortgages.pdf" >PDF Report</a></li>
+										<li><a class="button excel" href="https://docs.google.com/spreadsheets/d/1SfH37_i2qZcGyaG3QRJIYtr4mlIQ1O1y/edit?usp=sharing&ouid=117722979837305115541&rtpof=true&sd=true" >spreadsheet</a></li>
 									</ul></h3>
 
 								<p>
-									<i> NOTE: This is a collaborative group project completed by 4 students </i><br>
-									A pricing tool application comparing premiums, reserves and visualising the
-									progress of reserves over time for different insurance products. This tool was
-									created using the "shiny" package and outputs as a "shiny.app".</p>
-								<a href="https://sivaramainkaran.shinyapps.io/pricing_tool/">
-									<span class="image lgprojects"> <img src="images/shiny_app.jpg" alt="" /></span> </a>
-								</div>
+									An analysis of Level and Indexed annuities, holding a house as security. The goal
+									is to determine the maximum monthly annuity payment which allows debt to the
+									company paying the annuity to not exceed the value of the house.</p>
+								<a href="pdf/reverse_mortgages.pdf">
+									<span class="image projects"> <img src="images/deratio.png" alt="" /></span> </a>
 
+								</div>
 								<br>
 								<div class ="bord">
 								<h3> <i class="fab fa-r-project"></i> Pricing Analysis: General Insurance
@@ -147,6 +165,24 @@
 								</div>
 
 								<br>
+								<div class ="bord">
+								<h3> <i class="fab fa-r-project"></i> Pricing Tool: Insurance Products
+									<ul class="buttons">
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/Life-Insurance-Pricing-Tool" >Github</a></li>
+										<li><a class="button shiny" href="https://sivaramainkaran.shinyapps.io/pricing_tool/" >Shiny</a></li>
+									</ul></h3>
+
+								<p>
+									<i> NOTE: This is a collaborative group project completed by 4 students </i><br>
+									A pricing tool application comparing premiums, reserves and visualising the
+									progress of reserves over time for different insurance products. This tool was
+									created using the "shiny" package and outputs as a "shiny.app".</p>
+								<a href="https://sivaramainkaran.shinyapps.io/pricing_tool/">
+									<span class="image lgprojects"> <img src="images/shiny_app.jpg" alt="" /></span> </a>
+								</div>
+
+								<br>
+
 								<div class ="bord">
 								<h3> <i class="fab fa-r-project"></i> Sensitivity Analysis: Insurance Products
 									<ul class="buttons">
@@ -187,23 +223,7 @@
 								<br clear="left">
 
 								</div>
-								<br>
-								<div class ="bord">
-								<h3> <i class="fas fa-file-excel"></i> Reverse Mortgage Analysis
-									<ul class="buttons">
-										<li><a class="button github" href="https://github.com/SivaramAinkaran/Reverse-Mortgage-Analysis/tree/main" >Github</a></li>
-										<li><a class="button pdf" href="pdf/reverse_mortgages.pdf" >PDF Report</a></li>
-										<li><a class="button excel" href="https://docs.google.com/spreadsheets/d/1SfH37_i2qZcGyaG3QRJIYtr4mlIQ1O1y/edit?usp=sharing&ouid=117722979837305115541&rtpof=true&sd=true" >spreadsheet</a></li>
-									</ul></h3>
 
-								<p>
-									An analysis of Level and Indexed annuities, holding a house as security. The goal
-									is to determine the maximum monthly annuity payment which allows debt to the
-									company paying the annuity to not exceed the value of the house.</p>
-								<a href="pdf/reverse_mortgages.pdf">
-									<span class="image projects"> <img src="images/deratio.png" alt="" /></span> </a>
-
-								</div>
 							</article>
 
 						<!-- Resume -->
