Addition of Budget Automation Project

--- a/index.html
+++ b/index.html
@@ -79,6 +79,23 @@
 								<h2 class="major">Projects</h2>
 
 								<div class ="bord">
+									<h3><i class="fab fa-python"></i>  <i class="fas fa-chart-bar"></i> Automated Budget Tracking
+										<ul class="buttons">
+											<li><a class="button github" href="https://github.com/SivaramAinkaran/Budget-Automation" >Github</a></li>
+										</ul></h3>
+	
+									<p>A personalised Power BI dashboard to visualise expenses and for budgeting purposes. <br>
+										Python has been used to extract, transform then load the data to a database which can be used in Power BI.
+										The Selenium package is used to log in and extract transaction data while the Pandas package formats the data to create a general, useable database.
+										User inputs have also been employed where required using the Tkinter Package.<br>
+										Code can be viewed above and due to the personal information in the data, access to the dashboard has not been provided.
+									</p>
+									<a >
+										<span class="image lgprojects" >  <img src="images/budget_powerbi.png"/> </span> </a>
+									</div>
+									<br>
+
+								<div class ="bord">
 								<h3><i class="fas fa-database"></i>  Australia's Wage Gap
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Australia-Wage-Gap" >Github</a></li>
@@ -94,7 +111,7 @@
 								</div>
 								<br>
 
-								<div class ="bord">
+								<!-- <div class ="bord">
 								<h3><i class="fas fa-database"></i>   Covid-19: A Brief visualisation
 									<ul class="buttons">
 										<li><a class="button github" href="https://github.com/SivaramAinkaran/Covid-BigQuery" >Github</a></li>
@@ -110,6 +127,44 @@
 								<div class='tableauPlaceholder' id='viz1653927697707' style='position: relative'><noscript><a href='#'><img alt='Vaccinations vs. Covid-19 Lethality - December 2020 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CovidVaccines_16532928815600&#47;Vaccinationsvs_Covid-19Lethality&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='CovidVaccines_16532928815600&#47;Vaccinationsvs_Covid-19Lethality' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;CovidVaccines_16532928815600&#47;Vaccinationsvs_Covid-19Lethality&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-GB' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1653927697707');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.6)+'px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
 								</div>
+								<br> -->
+
+								<div class ="bord">
+								<h3> <i class="fab fa-r-project"></i> Pricing Analysis: General Insurance
+									<ul class="buttons">
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/General-Insurance-Pricing-Analysis" >Github</a></li>
+										<li><a class="button kaggle" href="https://www.kaggle.com/sivaramainkaran/pricing-analysis-general-car-insurance" >Kaggle</a></li>
+										<li><a class="button pdf" href="pdf/general_insurance.pdf" >PDF Report</a></li>
+										<li><a class="button excel" href="https://docs.google.com/spreadsheets/d/1GdMfeCdZZzccgvG1gXRxgOl0Z0qwLRnV/edit?usp=sharing&ouid=117722979837305115541&rtpof=true&sd=true" >spreadsheet</a></li>
+
+									</ul></h3>
+
+								<p>
+									An analysis of "SuperCar" Insurance's claim amounts made by claimants
+									during the financial year 2019-2020 to determine a suitable pricing model or set of
+									pricing models to assist with setting insurance premiums. </p>
+								<a href="pdf/general_insurance.pdf">
+									<span class="image projects"> <img src="images/exponential.jpg" alt="" /></span> </a>
+								</div>
+
+								<br>
+
+								<div class ="bord">
+								<h3> <i class="fab fa-r-project"></i> Pricing Tool: Insurance Products
+									<ul class="buttons">
+										<li><a class="button github" href="https://github.com/SivaramAinkaran/Life-Insurance-Pricing-Tool" >Github</a></li>
+										<li><a class="button shiny" href="https://sivaramainkaran.shinyapps.io/pricing_tool/" >Shiny</a></li>
+									</ul></h3>
+
+								<p>
+									<i> NOTE: This is a collaborative group project completed by 4 students </i><br>
+									A pricing tool application comparing premiums, reserves and visualising the
+									progress of reserves over time for different insurance products. This tool was
+									created using the "shiny" package and outputs as a "shiny.app".</p>
+								<a href="https://sivaramainkaran.shinyapps.io/pricing_tool/">
+									<span class="image lgprojects"> <img src="images/shiny_app.jpg" alt="" /></span> </a>
+								</div>
+
 								<br>
 
 
@@ -146,42 +201,8 @@
 
 								</div>
 								<br>
-								<div class ="bord">
-								<h3> <i class="fab fa-r-project"></i> Pricing Analysis: General Insurance
-									<ul class="buttons">
-										<li><a class="button github" href="https://github.com/SivaramAinkaran/General-Insurance-Pricing-Analysis" >Github</a></li>
-										<li><a class="button kaggle" href="https://www.kaggle.com/sivaramainkaran/pricing-analysis-general-car-insurance" >Kaggle</a></li>
-										<li><a class="button pdf" href="pdf/general_insurance.pdf" >PDF Report</a></li>
-										<li><a class="button excel" href="https://docs.google.com/spreadsheets/d/1GdMfeCdZZzccgvG1gXRxgOl0Z0qwLRnV/edit?usp=sharing&ouid=117722979837305115541&rtpof=true&sd=true" >spreadsheet</a></li>
 
-									</ul></h3>
 
-								<p>
-									An analysis of "SuperCar" Insurance's claim amounts made by claimants
-									during the financial year 2019-2020 to determine a suitable pricing model or set of
-									pricing models to assist with setting insurance premiums. </p>
-								<a href="pdf/general_insurance.pdf">
-									<span class="image projects"> <img src="images/exponential.jpg" alt="" /></span> </a>
-								</div>
-
-								<br>
-								<div class ="bord">
-								<h3> <i class="fab fa-r-project"></i> Pricing Tool: Insurance Products
-									<ul class="buttons">
-										<li><a class="button github" href="https://github.com/SivaramAinkaran/Life-Insurance-Pricing-Tool" >Github</a></li>
-										<li><a class="button shiny" href="https://sivaramainkaran.shinyapps.io/pricing_tool/" >Shiny</a></li>
-									</ul></h3>
-
-								<p>
-									<i> NOTE: This is a collaborative group project completed by 4 students </i><br>
-									A pricing tool application comparing premiums, reserves and visualising the
-									progress of reserves over time for different insurance products. This tool was
-									created using the "shiny" package and outputs as a "shiny.app".</p>
-								<a href="https://sivaramainkaran.shinyapps.io/pricing_tool/">
-									<span class="image lgprojects"> <img src="images/shiny_app.jpg" alt="" /></span> </a>
-								</div>
-
-								<br>
 
 								<div class ="bord">
 								<h3> <i class="fab fa-r-project"></i> Sensitivity Analysis: Insurance Products
