--- a/index.html
+++ b/index.html
@@ -60,16 +60,13 @@
 								<blan class="image circle"><img src="images/pfp2.jpg"></blan>
 								<h2 class="major">About me</h2>
 								<p>
-									Hi, my name is Sivaram Ainkaran and I am a recent Bachelor of Actuarial Science (minor in Finance) graduate at Monash University. <br>
-									My skills largely lie in data analysis and visualisation in R(RStudio) and I am constantly
-									developing these, in addition to my skills in SQL(BigQuery), Tableau and Python,
-									through personal projects and study.<br>
-									As an aspiring Data Analyst and recent entry into the job market, I hope to bring these
-									strong coding and analysis skills developed throughout university and further study
-									to an industry setting, to nurture my passions and skillset in a dynamic environment.<br>
-
-
-
+									Hi, I'm Siv! <br>
+									I am a Data Analyst with a solid foundation in data analytics, modeling and programming, developed throughout my degree in Actuarial Science, 
+									work and personal endeavours. <br>
+									With a flexible skillset focused around Python and Excel and with proficiency using SQL, Alteryx and BI tools like Power BI and Tableau, 
+									I am well equipped to tackle complex data problems, streamline workflows, optimize business processes and inform data-driven decision making. <br>
+									My passion lies in my eagerness to expand my knowledge and refine my technical abilities, and I am constantly seeking the next challenge to 
+									develop these skills and deliver valuable insights for a business's success.
 
 								</p>
 							</article>
@@ -84,9 +81,10 @@
 											<li><a class="button github" href="https://github.com/SivaramAinkaran/Budget-Automation" >Github</a></li>
 										</ul></h3>
 	
-									<p>A personalised Power BI dashboard to visualise expenses and for budgeting purposes. <br>
+									<p>A personalised multi-page Power BI dashboard to visualise expenses and for budgeting purposes. <br>
 										Python has been used to extract, transform then load the data to a database which can be used in Power BI.
-										The Selenium package is used to log in and extract transaction data while the Pandas package formats the data to create a general, useable database.
+										The Selenium package is used to automate the logging in and extraction of transaction data while the Pandas package 
+										formats the data to create a general, useable database.
 										User inputs have also been employed where required using the Tkinter Package.<br>
 										Code can be viewed above and due to the personal information in the data, access to the dashboard has not been provided.
 									</p>
