Update of About Me

--- a/index.html
+++ b/index.html
@@ -61,13 +61,15 @@
 								<p>
 									Hi, I'm Siv - a Data Analyst with a solid foundation in data analytics, modeling and programming, developed throughout my degree in Actuarial Science, 
 									work experience and personal endeavours. <br>
-									Working in the Australian Defence sector with large-scale construction projects for the last three years has given me the opportunity
-									to work with diverse groups of people, from managers to contractors, each with their own breadth of knowledge and experience. This has given me the opportunity to not only develop my technical skills, but has considerably developed my 
+									
+									<br>
+									I have been working in the Australian Defence sector with large-scale construction projects for the last three years.<br>
+									This has given me the opportunity to not only develop my technical skills, but has considerably developed my 
 									own knowledge base and communication skills, enabling me to work effectively with cross-functional teams. <br>
+
+									<br>
 									With a flexible skillset focused around Python and Excel and with proficiency using SQL, Alteryx and BI tools like Power BI and Tableau, 
-									I am well equipped to tackle complex data problems, streamline workflows, optimize business processes and inform data-driven decision making. <br>
-									My passion lies in my eagerness to expand my knowledge and refine my technical abilities, and I am constantly seeking the next challenge to 
-									develop these skills while delivering valuable insights for a business's success.
+									I am well equipped to tackle complex data problems, streamline workflows, optimize business processes and inform data-driven decision making. 
 
 								</p>
 							</article>
