--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									work experience and personal endeavours. <br>
 									
 									<br>
-									I have been working in the Australian Defence sector with large-scale construction projects for the last three years.<br>
+									I have been working in the Australian Defence sector, assisting the HOTO (Handover-Takeover) process for large-scale construction projects for the last three years.<br>
 									This has given me the opportunity to not only develop my technical skills, but has considerably developed my 
 									own knowledge base and communication skills, enabling me to work effectively with cross-functional teams. <br>
 
